	Prefer taking bug number from current line before looking at
	mail headers.
	(tinydebian-bts-mail-ctrl-remove-package-ask): Add 'RM' type.
	(tinydebian-bts-mail-ctrl-remove-package): Update docstring to include
	RM, ROP.
	(tinydebian-:usertag-email-list): New.
	(tinydebian-bts-mail-ctrl-usertag): add new arg `email'. Use
	`tinydebian-:usertag-email-list'.

2010-03-31 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-command-show-wnpp-alert): sort
	* displayed lines.

2010-03-30 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode-debian-address-ask-bug):
	Add many more bug detection methods.

2010-03-27 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyeat.el (tinyeat-install-default-bindings): Change
	direction of delete. The key M-DEL now delete forward, not
	backward to be compatible with other programs as DEL key
	deletes forward.

2010-03-21 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-launchpad-bug-type-p): Read
	'X-Launchpad-Bug:' field for product name.

2010-03-20 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-launchpad-bug-type-p): Fix
	`re-search-forward' call arguments.

2010-03-12 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyreplace.el
	(top level:Install): new instructions.
	(tinyreplace-with-keymap): Remove.
	(tinyreplace-define-keys-compile-map): Use `local-set-key'.
	(tinyreplace-install-hooks): New. Hooks are no longer installed
	by default at file load time.
	(tinyreplace-install-default-keybings): Install to compile
	and grep buffer. Remove UNINSTALL option.
	(tinyreplace-install): Remove UNINSTALL option.

2010-03-05 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydiff.el (tinydiff-patch): Display 'hunk' if TYPE is set
	in questions.

2010-03-01 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-freshmeat-bug-type-p): remove
	extra unused regexp. This fixes CPAN bug URL detection.
